# game-translator-releases

./: .cursorrules  .editorconfig  .git_commit_msg_r64.txt  .git_commit_msg_r65.txt  .git_commit_msg_r66.txt  .gitignore  AUDIT.md  AUDIT_R57.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  START.bat  build.py  main.py  one_click_pipeline.py  pyproject.toml  renpy_translate.example.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: release.yml  test.yml  test_macos.yml
_archive/: AUDIT_R63.md  CHANGELOG_RECENT_r52.md  EVOLUTION.md  EVOLUTION_r56_r60.md  EVOLUTION_r61_r65.md
core/: api_client.py  api_plugin.py  http_pool.py  prompts.py  runtime_hook_emitter.py  translation_db.py  translation_utils.py
custom_engines/: example_echo.py
docs/: ARCHITECTURE.md  ONBOARDING.md  REFERENCE.md
docs/adr/: 0006-python-310-floor.md  0007-mypy-enforce-scope.md  0008-path-traversal-guard.md  0009-ruff-ci-gate.md  0010-evolution-rolling-archive.md  0011-shared-config-helper.md  README.md
engines/: __init__.py  engine_base.py  engine_detector.py  generic_pipeline.py  unity_xunity.py
file_processor/: checker.py  splitter.py  validator.py
pipeline/: helpers.py  stages.py
scripts/: install_hooks.bat  migrate_db_v2_to_v1.py  verify_docs_claims.py
tests/: test_all.py  test_api_client.py  test_api_client_response_cap.py  test_batch1.py  test_complex_fixture.py  test_custom_engine.py  test_file_processor.py  test_file_safety.py  test_file_safety_c5.py  test_file_safety_loaders.py  test_glossary_prompts_config.py  test_pickle_safe_redteam.py  test_runtime_hook_filter.py  test_sandbox_response_cap.py  test_tl_pipeline.py  test_tl_retry.py  test_translators.py  test_unity_xunity_engine.py  test_verify_docs_claims.py  test_verify_docs_claims_main.py  test_verify_docs_claims_push_status.py
translators/: _tl_parser_selftest.py  _tl_retry.py  direct.py  renpy_text_utils.py  retranslator.py  screen.py  tl_mode.py
