[project]
name = "multi-engine-game-translator"
version = "1.0.0"
description = "纯 Python 的 Ren'Py 游戏自动汉化工具，通过 LLM API 将 .rpy 脚本翻译为简体中文"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
# 零第三方依赖（纯标准库）
dependencies = []

[project.urls]
Repository = "https://github.com/Dean20030514/Multi-Engine-Game-Translator"
