[project]
name = "multi-engine-game-translator"
# r62 B2: bumped 1.0.0 → 2.0.0 to reflect r52 C4 BREAKING (multi-target language
# retire) + r52 C3 BREAKING (importlib plugin retire) + r57 T1 BREAKING
# (Python 3.10 floor). Project has 21 rounds 0-CRITICAL streak + 99.991%
# tl-mode success rate; v1.0.0 understated maturity. Following SemVer:
# multiple BREAKING changes accumulated since v1.0.0 → MAJOR bump.
version = "2.0.0"
description = "Pure-Python multi-engine game translator (Ren'Py / RPG Maker MV-MZ / Unity XUnity / CSV-JSONL) using LLM APIs for Simplified Chinese localization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
# 零第三方依赖（纯标准库）
dependencies = []

[project.urls]
Repository = "https://github.com/Dean20030514/Multi-Engine-Game-Translator"

# Round 58 P1: ruff lint + format configuration.
# Note: ruff is a CI / dev-time tool, NOT a runtime dependency
# (zero-dependency hard contract still holds — see CLAUDE.md "项目身份"段).
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "_archive",
    "tests/artifacts",
]

[tool.ruff.lint]
# Default rules (E + F + W) are sufficient for catching unused imports,
# undefined names, and obvious bugs. Stricter rule sets (B / I / N / etc.)
# can be added incrementally in future rounds.
select = ["E", "F", "W"]
# Tolerated rules (project-specific reasons; don't add to this list
# without plan-first):
#   E402: module-level import not at top of file -- tests / scripts
#         use `sys.path.insert(...)` before imports, intentional pattern.
#   E501: line too long -- 100-char target is informational; legacy code
#         and docstring-heavy files exceed this and bulk-rewrap is out
#         of scope for r58.
#   F841: unused local variable -- 12 sites kept as debug placeholders
#         or for clarity; future rounds may revisit each individually.
extend-ignore = ["E402", "E501", "F841"]

[tool.ruff.format]
# Match Black-compatible defaults; the r58 P1 introduction round
# bulk-formatted 98 files via `ruff format .` to clear the initial
# baseline. New PRs are gated by `ruff format --check .` in CI.
quote-style = "double"
indent-style = "space"
